--- a/frontend/index.html
+++ b/frontend/index.html
@@ -9,7 +9,12 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <h1>video project</h1>
+    <header>
+        <video class="video-container" controls muted autoplay loop>
+            <source src="..\media\video.mp4" type="video/mp4"/>
+        </video>
+        <h1>Video Project</h1>
+    </header>
     <!-- javascript -->
     <script src="app.js"></script>
   </body>
