--- a/frontend/index.html
+++ b/frontend/index.html
@@ -16,6 +16,6 @@
         <h1>Video Project</h1>
     </header>
     <!-- javascript -->
-    <script src="app.js"></script>
+    <script src="..\backend\app.js"></script>
   </body>
 </html>
