--- a/frontend/index.html
+++ b/frontend/index.html
@@ -10,7 +10,7 @@
   </head>
   <body>
     <header>
-        <video class="video-container" controls muted autoplay loop>
+        <video class="video-container" muted autoplay loop>
             <source src="..\media\video.mp4" type="video/mp4"/>
         </video>
         <h1>Video Project</h1>
