--- a/frontend/index.html
+++ b/frontend/index.html
@@ -14,6 +14,12 @@
             <source src="..\media\video.mp4" type="video/mp4"/>
         </video>
         <h1>Video Project</h1>
+        <!-- video switch -->
+        <button class="switch-btn">
+            <span>play</span>
+            <span>pause</span>
+            <span class="switch"></span>
+        </button>
     </header>
     <!-- javascript -->
     <script src="..\backend\app.js"></script>
