--- a/frontend/index.html
+++ b/frontend/index.html
@@ -9,6 +9,11 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
+      <!-- preloader -->
+      <div class="preloader">
+          <img src="..\media\preloader.gif" alt="preloader">
+      </div>
+      <!-- header -->
     <header>
         <video class="video-container" muted autoplay loop>
             <source src="..\media\video.mp4" type="video/mp4"/>
